# OpenThymos

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.typecheck.json  tsconfig.typecheck.tsbuildinfo
.github/workflows/: pages.yml  release.yml  rust.yml
docs/: CNAME  _config.yml  api-reference.md  architecture.md  coding-agent.md  faq.md  getting-started.md  index.md  interfaces.md  launch-playbook.md  monster-runtime-roadmap.md  providers.md  roadmap.md  secure-tool-fabric.md
docs/_includes/: footer.html  head.html  nav.html
docs/_layouts/: default.html
docs/assets/css/: site.css
docs/assets/js/: site.js
public/: CNAME
scripts/: check-docs.mjs  doctor.mjs  install.sh
skills/framer-motion-ui-animations/: SKILL.md
skills/framer-motion-ui-animations/agents/: openai.yaml
skills/framer-motion-ui-animations/references/: motion-patterns.md
skills/ui-immersive-3d-dribbble/: SKILL.md
skills/ui-immersive-3d-dribbble/agents/: openai.yaml
skills/ui-immersive-3d-dribbble/references/: inspiration-notes.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/runs/: page.tsx
src/app/runs/[id]/: page.tsx
src/components/branding/: ThymosLogo.tsx
src/components/marketing/: ThymosLanding.tsx
src/components/trajectory/: EntryTimeline.tsx  ExecutionLog.tsx  RunViewer.tsx  StreamView.tsx  WorldView.tsx
src/lib/: site.ts  thymos-api.ts  thymos-auth.ts  thymos-billing.ts
thymos/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  thymos-runs.db-shm  thymos-runs.db-wal
thymos/.github/workflows/: pages.yml
thymos/clients/vscode/: README.md  package.json  tsconfig.json
thymos/clients/vscode/src/: extension.ts
thymos/crates/thymos-cli/: Cargo.toml
thymos/crates/thymos-cli/src/: main.rs  shell.rs
thymos/crates/thymos-cli/tests/: e2e.rs
thymos/crates/thymos-client/: Cargo.toml
thymos/crates/thymos-client/src/: lib.rs
thymos/crates/thymos-cognition/: Cargo.toml
thymos/crates/thymos-cognition/src/: anthropic.rs  context.rs  lib.rs  mock.rs  openai.rs
thymos/crates/thymos-cognition/tests/: migration_4_7.rs
thymos/crates/thymos-compiler/: Cargo.toml
thymos/crates/thymos-compiler/src/: lib.rs
thymos/crates/thymos-core/: Cargo.toml
thymos/crates/thymos-core/src/: commit.rs  crypto.rs  delta.rs  error.rs  hash.rs  ids.rs  intent.rs  lib.rs  proposal.rs  world.rs  writ.rs
thymos/crates/thymos-ledger/: Cargo.toml
thymos/crates/thymos-ledger/src/: lib.rs  postgres.rs  replay.rs  sqlite.rs
thymos/crates/thymos-marketplace/: Cargo.toml
thymos/crates/thymos-marketplace/src/: lib.rs
thymos/crates/thymos-policy/: Cargo.toml
thymos/crates/thymos-policy/src/: lib.rs
thymos/crates/thymos-runtime/: Cargo.toml
thymos/crates/thymos-runtime/examples/: hello_llm_triad.rs  hello_triad.rs
thymos/crates/thymos-runtime/src/: agent.rs  agent_async.rs  lib.rs
thymos/crates/thymos-runtime/tests/: agent_loop.rs
thymos/crates/thymos-server/: Cargo.toml
thymos/crates/thymos-server/src/: audit.rs  auth.rs  execution.rs  lib.rs  main.rs  marketplace_api.rs  middleware.rs  run_store.rs  telemetry.rs
thymos/crates/thymos-server/tests/: auth_e2e.rs  e2e.rs
thymos/crates/thymos-tools/: Cargo.toml
thymos/crates/thymos-tools/src/: coding.rs  lib.rs
thymos/crates/thymos-tools/tests/: manifest_tools.rs
thymos/crates/thymos-worker/: Cargo.toml
thymos/crates/thymos-worker/src/: main.rs
thymos/crates/thymos-worker/tests/: worker_e2e.rs
thymos/docs/: architecture.md  getting-started.md
thymos/docs/pages/: index.md
wiki/: API-Overview.md  Architecture.md  FAQ.md  Getting-Started.md  Home.md  Interfaces.md  _Sidebar.md
