[package]
name = "thymos-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust HTTP client SDK for the Thymos server API"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio       = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
axum-test = "20"
thymos-server = { path = "../thymos-server" }
thymos-marketplace = { path = "../thymos-marketplace" }
tokio = { workspace = true, features = ["full", "test-util"] }
