[package]
name = "thymos-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
blake3     = { workspace = true }
thiserror  = { workspace = true }
hex        = { workspace = true }
ed25519-dalek = { workspace = true }
rand       = { workspace = true }
