[package]
name = "thymos-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
postgres = ["tokio-postgres", "deadpool-postgres", "tokio"]

[dependencies]
thymos-core = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
blake3      = { workspace = true }
hex         = { workspace = true }
thiserror   = { workspace = true }

# SQLite (default)
rusqlite = { workspace = true, optional = true }

# Postgres
tokio-postgres    = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
tokio             = { workspace = true, optional = true }
