[package]
name = "thymos-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tool marketplace: publish, discover, and install manifest tools and MCP servers."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
hex        = { workspace = true }
blake3     = { workspace = true }
rusqlite   = { workspace = true }
thymos-core = { path = "../thymos-core" }

[dev-dependencies]
