[package]
name = "thymos-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
async = ["tokio"]

[dependencies]
thymos-core = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
tokio       = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
